test/exits/sungeun/exitWithNoParens.chpl
writeln("Hello, world");
exit 1;
